# utils

./: CMakeLists.txt  README.md  utils.hpp  utils_base.hpp
_cmake/: utils.cmake
detail/: clock.hpp  colour.hpp  common.hpp  math.h  math.hpp  ratio.hpp  strings.hpp  trig.hpp  vector.hpp
docs/: README.md
test_app/: CMakeLists.txt  pch.h
test_app/src/: app_main.cpp
tests/: CMakeLists.txt
ut_tests/: CMakeLists.txt  pch.h  ut_tests.natvis
ut_tests/data/: test_file.txt
ut_tests/include/tests/: helpers.hpp
ut_tests/src/test_cases/: colour.cpp  common.cpp  ilist.cpp  math.cpp  matrix.cpp  mul_iterable.cpp  random.cpp  ratio.cpp  scope_guard.cpp  stack.cpp  strings.cpp  sys_handler.cpp  type_support.cpp  vector.cpp
utils/: CMakeLists.txt  pch.h  utils.natvis
utils/include/utils/: macros.hpp  utils.hpp
utils/include/utils/detail/: assert.hpp  clock.hpp  colour.hpp  common.hpp  dependencies.hpp  ilist.hpp  math.hpp  matrix.hpp  mul_iterable.hpp  random.hpp  ratio.hpp  scope_guard.hpp  stack.hpp  string_pool.hpp  strings.hpp  sys_handler.hpp  trig.hpp  type_support.hpp  vector.hpp
utils/modules/: utils.ixx
utils/modules/components/: base_definitions.ixx  clock.ixx  colour.ixx  common.ixx  math.ixx  random.ixx
utils/modules/components/base/: base_definitions.ixx
utils/modules/components/math/: ratio.ixx
utils/modules/components/utility/: clock.ixx  strings.ixx
utils/src/: stub.cpp
