cmake_minimum_required(VERSION 3.26)
include("${OPT_UTILS_DIR}/utils.cmake")

project(${TARGET_NAME} CXX)

collect_sources(SOURCE_FILES MODULE_INTERFACES HEADERS ADDITIONAL_FILES)
add_executable(${TARGET_NAME} ${SOURCE_FILES} ${MODULE_INTERFACES} ${HEADERS} ${ADDITIONAL_FILES})
set_build_opts(${TARGET_NAME} "${ADDITIONAL_FILES}")
make_src_groups("${SOURCE_FILES}" "${MODULE_INTERFACES}" "${HEADERS}" "${ADDITIONAL_FILES}")